--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
       href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300;400;600&display=swap"
       rel="stylesheet"
     />
-    <title>React App</title>
+    <title>Grouped Tasks</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
